# Team4-Backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
.github/: .gitmessage.txt
.github/workflows/: cd.yml  ci.yml
AWS/: asgi.py  settings.py  urls.py  wsgi.py
AWS/chat/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
AWS/chat/migrations/: 0001_initial.py
AWS/diary/: apps.py  models.py  serializers.py
AWS/recommend/: apps.py  models.py  serializers.py  services.py
AWS/recommend/migrations/: 0001_initial.py
AWS/users/: apps.py  models.py  serializers.py  urls.py  views.py
AWS/users/migrations/: 0001_initial.py  0002_emailverification_token_socialaccount.py  0003_rename_update_at_user_updated_at.py  0004_passwordresettoken.py
AWS/users/utils/: email_token.py  send_email.py
AWS/weather/: apps.py  models.py  serializers.py  urls.py  views.py
AWS/weather/migrations/: 0001_initial.py
