[project]
name = "AWS"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.2.7",
    "django-filter>=25.2",
    "django-restframework>=0.0.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt[blacklist]>=5.5.1",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.28.0",
    "drf-yasg>=1.21.11",
    "gunicorn>=23.0.0",
    "whitenoise",
    "psycopg[binary]",
    "ruff>=0.14.0",
    "itsdangerous>=2.2.0",
]
